--- a/ps3.1
+++ b/ps3.1
@@ -1,6 +1,6 @@
-fhand = open ('CO-OPS__8729108__wl.csv');
-count=0;
-max_water_level=0;
+fhand = open ('CO-OPS__8729108__wl.csv')
+count=0
+max_water_level=0
 date_time_max_water_level= ''
 fhand.readline()
 
